--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -17,12 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="pf7-Ph-TRc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="pf7-Ph-TRc">
                                 <rect key="frame" x="0.0" y="-24" width="911" height="462"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="462" id="XiL-TO-xIS"/>
-                                    <constraint firstAttribute="width" constant="867" id="ZM2-cH-p1t"/>
-                                    <constraint firstAttribute="width" secondItem="pf7-Ph-TRc" secondAttribute="height" multiplier="289:154" id="g9W-0R-HmP"/>
+                                    <constraint firstAttribute="width" constant="911" id="ZM2-cH-p1t"/>
+                                    <constraint firstAttribute="width" secondItem="pf7-Ph-TRc" secondAttribute="height" multiplier="289:154" constant="44" id="g9W-0R-HmP"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pjC-Ah-Kgp">
@@ -133,13 +133,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="pf7-Ph-TRc" secondAttribute="trailing" id="5oU-WB-3In"/>
+                            <constraint firstAttribute="trailing" secondItem="pf7-Ph-TRc" secondAttribute="trailing" constant="-15" id="5oU-WB-3In"/>
                             <constraint firstItem="pjC-Ah-Kgp" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="A1c-Bj-l7C"/>
-                            <constraint firstItem="pf7-Ph-TRc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="CLf-np-cPl"/>
+                            <constraint firstItem="pf7-Ph-TRc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="-44" id="CLf-np-cPl"/>
                             <constraint firstItem="pf7-Ph-TRc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="IZm-7l-U5R"/>
-                            <constraint firstItem="pf7-Ph-TRc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ddS-dG-iSv"/>
+                            <constraint firstItem="pf7-Ph-TRc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="7.5" id="ddS-dG-iSv"/>
                             <constraint firstItem="pjC-Ah-Kgp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pze-AL-Wgk"/>
-                            <constraint firstAttribute="trailing" secondItem="pf7-Ph-TRc" secondAttribute="trailing" id="wkd-fo-UdJ"/>
+                            <constraint firstAttribute="trailing" secondItem="pf7-Ph-TRc" secondAttribute="trailing" constant="-15" id="wkd-fo-UdJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -162,15 +162,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="l0t-BV-JVZ">
-                                <rect key="frame" x="0.0" y="-24" width="896" height="462"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="462" id="D7a-AH-g59"/>
-                                    <constraint firstAttribute="width" constant="867" id="pUM-6t-3ed"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="l0t-BV-JVZ">
+                                <rect key="frame" x="0.0" y="-24" width="867" height="462"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Igk-6t-5Dk">
-                                <rect key="frame" x="398" y="335" width="100" height="37"/>
+                                <rect key="frame" x="383.5" y="335" width="100" height="37"/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="22"/>
                                 <size key="titleShadowOffset" width="0.0" height="1"/>
                                 <state key="normal" title="Close" backgroundImage="Button-Normal">
@@ -183,7 +179,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w1j-yG-vdX">
-                                <rect key="frame" x="379.5" y="249" width="137" height="37"/>
+                                <rect key="frame" x="365" y="249" width="137" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="137" id="PLq-Cb-Xb6"/>
                                 </constraints>
@@ -199,7 +195,7 @@
                                 </connections>
                             </button>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kf2-WN-oQl">
-                                <rect key="frame" x="64" y="20" width="768" height="188.5"/>
+                                <rect key="frame" x="64" y="20" width="739" height="181.5"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="kf2-WN-oQl" secondAttribute="height" multiplier="346:85" id="aJl-5x-xSO"/>
@@ -212,17 +208,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="l0t-BV-JVZ" secondAttribute="trailing" constant="29" id="6Or-3X-gyp"/>
+                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="centerX" secondItem="Igk-6t-5Dk" secondAttribute="centerX" id="7KM-VN-3BB"/>
                             <constraint firstItem="kf2-WN-oQl" firstAttribute="centerX" secondItem="Fcv-Qd-Gop" secondAttribute="centerX" id="8IA-Ap-pui"/>
-                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="centerY" secondItem="Fcv-Qd-Gop" secondAttribute="centerY" id="COE-ss-xYE"/>
+                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="top" secondItem="Fcv-Qd-Gop" secondAttribute="topMargin" constant="-24" id="8Uy-Xn-qqN"/>
                             <constraint firstItem="w1j-yG-vdX" firstAttribute="centerX" secondItem="Fcv-Qd-Gop" secondAttribute="centerX" id="CRZ-ZS-Ior"/>
-                            <constraint firstAttribute="trailing" secondItem="l0t-BV-JVZ" secondAttribute="trailing" id="D8Z-br-QBn"/>
+                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="centerX" secondItem="kf2-WN-oQl" secondAttribute="centerX" id="DQs-im-Ie7"/>
+                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="leading" secondItem="Fcv-Qd-Gop" secondAttribute="leading" id="FUq-9p-S2r"/>
                             <constraint firstItem="qDZ-jf-ftJ" firstAttribute="bottom" secondItem="Igk-6t-5Dk" secondAttribute="bottom" constant="21" id="Hcy-sR-kDN"/>
                             <constraint firstItem="kf2-WN-oQl" firstAttribute="leading" secondItem="qDZ-jf-ftJ" secondAttribute="leading" constant="20" id="L5n-Jf-wRD"/>
                             <constraint firstItem="Igk-6t-5Dk" firstAttribute="top" secondItem="w1j-yG-vdX" secondAttribute="bottom" constant="49" id="QST-f8-neq"/>
+                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="centerX" secondItem="w1j-yG-vdX" secondAttribute="centerX" id="X6J-GZ-nkk"/>
+                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="centerY" secondItem="Fcv-Qd-Gop" secondAttribute="centerY" id="e5J-iO-qba"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="l0t-BV-JVZ" secondAttribute="trailing" constant="-35" id="eYa-dZ-2vp"/>
                             <constraint firstItem="kf2-WN-oQl" firstAttribute="top" secondItem="qDZ-jf-ftJ" secondAttribute="top" constant="20" id="mPw-xf-rjK"/>
-                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="leading" secondItem="Fcv-Qd-Gop" secondAttribute="leading" id="oy5-kr-x1o"/>
                             <constraint firstItem="Igk-6t-5Dk" firstAttribute="centerX" secondItem="Fcv-Qd-Gop" secondAttribute="centerX" id="qpu-qv-Ozc"/>
-                            <constraint firstItem="l0t-BV-JVZ" firstAttribute="centerX" secondItem="Fcv-Qd-Gop" secondAttribute="centerX" id="yey-po-8Da"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qDZ-jf-ftJ"/>
                     </view>
